Set the pointer to the popup widget to 0 when a view closes

BUG:436893